k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-srv
  labels:
    run: hello-world-srv-run
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  type: LoadBalancer
  selector:
    app: hello-world
